--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -1,15 +1,17 @@
+@use 'src/css/utility' as *;
+
 .BenefitsContainer {
     width: 100%;
     
     .BenefitsIcons {
         width: 100%;
         flex-wrap: nowrap;
-        margin-bottom: 2rem;
+        margin-bottom: Rem(2);
         display: flex;
         justify-content: space-evenly;
 
         @media screen and (max-width: 992px) {
-            margin-top: 3rem;
+            margin-top: Rem(3);
             flex-direction: column;
         }
     }
@@ -20,15 +22,15 @@
         flex-direction: column;
         justify-content: space-evenly;
         width: 100%;
-        gap: 4rem;
+        gap: Rem(4);
         margin: 0 auto;
 
         h3 {
-            margin: 1.6rem 0;
+            margin: Rem(1.6) 0;
         }
 
         img {
-            margin-bottom: 4rem;
+            margin-bottom: Rem(4);
         }
 
         @media screen and (max-width: 992px) {
@@ -40,7 +42,7 @@
             }
 
             h3 {
-            margin: 1.6rem 0;
+            margin: Rem(1.6) 0;
             }
 
             img {
@@ -52,12 +54,12 @@
             width: 100%;
             justify-content: space-evenly;
             align-items: center;
-            gap: 4rem;
+            gap: Rem(4);
             &:first-child {
                 flex-direction: row-reverse;
             }
             div {
-                width: 46.8rem;
+                width: Rem(46.8);
             }
             @media screen and (max-width: 992px) {
                 flex-direction: column;
@@ -81,9 +83,9 @@
     .BenefitsImage {
         background-size: contain;
         display: inline-block;
-        width: 7.2rem;
-        height: 7.2rem;
-        margin: 0.8rem;
+        width: Rem(7.2);
+        height: Rem(7.2);
+        margin: Rem(0.8);
     }
 }
 
@@ -91,13 +93,13 @@
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center;
-    width: 48.6rem;
-    height: 26rem;
+    width: Rem(48.6);
+    height: Rem(26);
     @media screen and (max-width: 992px) {
-        max-width: 48.6rem;
-        height: 22rem;
+        max-width: Rem(48.6);
+        height: Rem(22);
     }
     @media screen and (min-width: 320px) and (max-width: 375px) {
-        height: 15rem;
+        height: Rem(15);
     }
 }
