--- a/src/components/ClientLibraries/ClientLibraries.module.scss
+++ b/src/components/ClientLibraries/ClientLibraries.module.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: Rem(8) 0;
+    padding: rem(8) 0;
     width: 100%;
     background-size: auto;
 
@@ -28,21 +28,21 @@
         }
 
         .LogoAndLink {
-            padding: Rem(1) Rem(2);
+            padding: rem(1) rem(2);
             
             .LibraryGoTo {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
                 color: var(--ifm-color-danger);
-                gap: Rem(1);
+                gap: rem(1);
 
                 .LibraryChevron {
                     background-repeat: no-repeat;
                     background-position: center;
-                    width: Rem(1.2);
-                    height: Rem(1.2);
-                    margin-left: Rem(0.5);
+                    width: rem(1.2);
+                    height: rem(1.2);
+                    margin-left: rem(0.5);
                 }
             }
         }
