--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,13 +4,13 @@
     background-color: var(--ifm-color-black);
     display: flex;
     flex-direction: row;
-    padding: Rem(2);
+    padding: rem(2);
     justify-content: space-evenly;
-    margin-top: Rem(2.5);
+    margin-top: rem(2.5);
 
     @media screen and (max-width: 992px) {
         flex-direction: column;
-        gap: Rem(2);
+        gap: rem(2);
     }
 
     .FooterBody {
@@ -20,7 +20,7 @@
 
         .Email {
             color: var(--ifm-color-danger);
-            padding: 0 Rem(0.5);
+            padding: 0 rem(0.5);
         }
     }
 }
