--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    scroll-margin-top: Rem(10);
+    scroll-margin-top: rem(10);
 }
 
 .main-page-row:nth-child(even) {
