chore: fixing components

--- a/src/features/Home/Carousel/SlideContent/SlideContent.module.scss
+++ b/src/features/Home/Carousel/SlideContent/SlideContent.module.scss
@@ -1,6 +1,8 @@
-@use 'src/css/utility' as *;
+@use 'src/styles/utility' as *;
 .sliderContent {
     text-align: left;
+    border-left: none;
+
     &:after {
         box-sizing: border-box;
         content: "\201c";
@@ -10,7 +12,7 @@
         z-index: -1;
         left: 0;
         top: rem(-8);
-        color: lightgrey;
+        color: var(--colors-blue100);
         opacity: 56%;
     }
 }
