--- a/src/features/Home/ApiFeatures/ApiFeatures.module.scss
+++ b/src/features/Home/ApiFeatures/ApiFeatures.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   padding: rem(2) rem(10);
+  margin-top: rem(16);
 
   @media (max-width: 992px) {
     padding: rem(2) 0;
