--- a/src/features/Home/HeroHeader/HeroHeader.module.scss
+++ b/src/features/Home/HeroHeader/HeroHeader.module.scss
@@ -1,3 +1,4 @@
+@use 'src/styles/utility' as *;
 .HeroImageStyle {
     background-color: var(--brown-02);
     background-image: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)), url(/img/header.png);
@@ -5,31 +6,31 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 488px;
+    height: rem(60);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 40px;
+    padding-top: rem(4);
   
     @media screen and (max-width: 992px) {
-      margin-top: 47px;
+      margin-top: rem(4.7);
       padding-top: unset;
     }
   
     @media screen and (min-width: 320px) and (max-width: 375px) {
-      height: 378px;
+      height: rem(37.8);
     }
     .HeroContainerStyle {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 160px 0;
+        padding: rem(16) 0;
         width: 100%;
       
         @media screen and (max-width: 992px) {
           width: 100%;
-          padding: 80px 40px;
+          padding: rem(8) rem(4);
           align-items: baseline;
         }
     }
