--- a/src/features/Home/WaysToEarn/WaysToEarn.module.scss
+++ b/src/features/Home/WaysToEarn/WaysToEarn.module.scss
@@ -1,5 +1,6 @@
+@use 'src/styles/utility' as *;
 .WaysContainer {
-    margin-top: 20px;
+    margin-top: rem(2);
     @media screen and (max-width: 992px) {
         margin-top: 0;
     }
@@ -10,8 +11,8 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-around;
-        margin: 120px auto 0 auto;
-        padding: 30px 0;
+        margin: rem(16) auto 0 auto;
+        padding: rem(3) 0;
         @media screen and (max-width: 992px) {
           width: 100%;
         }
@@ -22,23 +23,23 @@
                 display: flex;
                 align-items: center;
                 width: unset;
-                max-width: 628px;
-                margin: 20px 12px;
-                padding: 16px;
+                max-width: rem(62.8);
+                margin: rem(2) rem(1.2);
+                padding: rem(1.6);
                 background-color: var(--ifm-color-emphasis-0);
-                box-shadow: 0 4px 8px rgb(14 14 14 / 10%);
+                box-shadow: 0 rem(0.4) rem(0.8) rgb(14 14 14 / 10%);
             }
         
             img {
                 width: auto;
-                height: 32px;
-                margin-right: 10px;
+                height: rem(3.2);
+                margin-right: rem(1);
             }
         
             @media screen and (max-width: 992px) {
                 span {
-                    max-width: 328px;
-                    margin: 16px;
+                    max-width: rem(32.8);
+                    margin: rem(1.6);
                     align-items: flex-start;
                 }
             }
