--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,3 +40,14 @@
 .main-page-row:nth-child(even) {
   background-color: var(--ifm-color-emphasis-100);
 }
+
+.error-message {
+  color: var(--colors-coral600);
+}
+
+a {
+  color: var(--colors-coral600);
+  &:hover {
+    color: var(--colors-coral600);
+  }
+}
